# Nice-ODE-Stack

./: .Rprofile  .gitignore  LICENSE  README.md  docker-compose-timestamp.sh  docker-compose.yml  docker_compose.log_example  dockerfile  install_R_pkgs.R  pyproject.toml  r_requirements.txt
.devcontainer/: devcontainer.json  dockerfile
gemma_llm/: dockerfile  entrypoint.sh
gemma_llm/app/: main.py  requirements.txt
mlflow_image/: dockerfile  entrypoint.sh
tensorboard/: dockerfile
