# proj-cuda-container/pyproject.toml
[tool.poetry]
name = "cuda-py-dev-tools"
version = "0.1.0"
description = "Core development tools for the cuda-py base image"
authors = ["Kelley Brady kelleyjbrady@protonmail.com"]

[tool.poetry.dependencies]
python = "^3.13" # Match Python version installed in Dockerfile
ruff = "^0.11"    # Example version, use desired
radian = "^0.6"  # Example version, use desired
jupyterlab = "^4.4" # Example version, use desired

